...
    <string name="ui_spaces">"Spaces"</string>
    <string name="ui_personal">"Personal"</string>
    <string name="ui_work">"Work"</string>
    <string name="ui_save">"Save"</string>
    <string name="ui_cancel">"Cancel"</string>
    <string name="ui_delete">"Delete"</string>
    <string name="ui_back">"Back"</string>
    <string name="ui_forward">"Forward"</string>
    <string name="ui_reload">"Reload"</string>
    <string name="ui_back_to_browser">"Back to browser"</string>
    <string name="ui_expand_sidebar">"Expand sidebar"</string>
    <string name="ui_collapse_sidebar">"Collapse sidebar"</string>
    <string name="ui_search_or_enter_url">"Search or enter URL"</string>
    <string name="ui_new_tab_home">"New tab home"</string>
    <string name="ui_search_anything">"Search anything"</string>
...
    <string name="ui_custom_theme_color">"Custom theme color"</string>
    <string name="ui_hex_color">"HEX color"</string>
    <string name="ui_six_hexadecimal_digits_for_example_3568c0">"Six hexadecimal digits, for example #3568C0"</string>
    <string name="ui_resize_split_view">"Resize split view"</string>
    <string name="ui_your_browsing_history_will_appear_here">"Your browsing history will appear here."</string>
    <string name="ui_search_history">"Search history"</string>
    <string name="ui_page_menu">"Page menu"</string>
    <string name="ui_unpin_from_sidebar">"Unpin from sidebar"</string>
    <string name="ui_pin_to_sidebar">"Pin to sidebar"</string>
    <string name="ui_use_mobile_site">"Use mobile site"</string>
    <string name="ui_use_desktop_site">"Use desktop site"</string>
    <string name="ui_find_in_page">"Find in page"</string>
    <string name="ui_new_split_view">"New split view"</string>
    <string name="ui_swap_panes">"Swap panes"</string>
    <string name="ui_close_split_view">"Close split view"</string>
    <string name="ui_choose_tab">"Choose tab"</string>
    <string name="ui_your_space">"your Space"</string>
...
    <string name="ui_one_pane">"One pane"</string>
    <string name="ui_restore_closed_tab">"Restore closed tab"</string>
    <string name="ui_toggle_sidebar">"Toggle sidebar"</string>
    <string name="ui_more_room">"More room"</string>
    <string name="ui_open_settings">"Open settings"</string>
    <string name="ui_preferences">"Preferences"</string>
    <string name="ui_open_history">"Open history"</string>
    <string name="ui_recent_visits">"Recent visits"</string>
    <string name="ui_toggle_desktop_site">"Toggle desktop site"</string>
    <string name="ui_user_agent">"User agent"</string>
    <string name="ui_website">"Website"</string>
    <string name="ui_system">"System"</string>
    <string name="ui_light">"Light"</string>
...
